<?xml version="1.0" encoding="utf-8"?>

<!-- Fragment for post-connect buttons and actions. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/versionTextView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="15sp" />
    <TextView
        android:id="@+id/freqCodeTextView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/versionTextView"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="15sp"
        android:layout_marginBottom="10sp" />
    <TextView
        android:id="@+id/rssiLabelTextView"
        android:text="@string/rssi_label_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/freqCodeTextView"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="15sp" />
    <TextView
        android:id="@+id/rssiValueTextView"
        android:layout_height="wrap_content"
        android:layout_width="30sp"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/freqCodeTextView"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" />
    <ProgressBar
        android:id="@+id/rssiProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/freqCodeTextView"
        android:layout_toRightOf="@id/rssiLabelTextView"
        android:layout_toLeftOf="@id/rssiValueTextView"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
    <CheckBox
        android:id="@+id/rssiToneCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rssitone_checkbox_name"
        android:layout_below="@id/rssiProgressBar"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginBottom="10sp" />

    <Button
        android:id="@+id/channelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_button_name"
        android:layout_below="@id/rssiToneCheckBox"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
    <Button
        android:id="@+id/freqButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freq_button_name"
        android:layout_below="@id/rssiToneCheckBox"
        android:layout_toRightOf="@id/channelButton"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
    <Button
        android:id="@+id/downOneMhzButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downone_button_name"
        android:layout_below="@id/channelButton"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
    <Button
        android:id="@+id/upOneMhzButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upone_button_name"
        android:layout_below="@id/channelButton"
        android:layout_toRightOf="@id/downOneMhzButton"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
    <Button
        android:id="@+id/autoTuneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autotune_button_name"
        android:layout_below="@id/upOneMhzButton"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
    <Button
        android:id="@+id/prevChanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevch_button_name"
        android:layout_below="@id/autoTuneButton"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
    <Button
        android:id="@+id/nextChanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextch_button_name"
        android:layout_below="@id/autoTuneButton"
        android:layout_toRightOf="@id/prevChanButton"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />

    <Button
        android:id="@+id/terminalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_button_name"
        android:layout_below="@id/nextChanButton"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_button_name"
        android:layout_below="@id/terminalButton"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />
</RelativeLayout>